# Protocol-RE

./: .gitignore  Blog.md  LICENSE  README.md  __init__.py  client.py  colab_cells.py  models.py  openenv.yaml  pyproject.toml
notebooks/: __init__.py  callbacks.py  cell3_7b_train.py  colab_cells_sft.ipynb  colab_cells_sft.py  plotting.py  sft_callbacks.py  sft_eval.py  trainer_wrapper.py  training_run_1.5b.ipynb
notebooks/figures/: results_sft_1.5b.json  results_sft_7b.json
scripts/: _convert_colab_py_to_ipynb.py  build_sft_dataset.py  regen_dashboard.py  smoke_test_scripted.py  smoke_test_with_llm.py  verify_phase1.py  verify_phase2.py
server/: Dockerfile  __init__.py  app.py  designer.py  matcher.py  protocol_one_env_environment.py  protocol_server.py  requirements.txt  spec.py  spec_schema.py
tests/: conftest.py  helpers.py  test_designer.py  test_matcher.py  test_matcher_reward_calibration.py  test_protocol_server.py
